force-app/main/default/objects/Opportunity_Demo__c/Opportunity_Demo__c.object-meta.xml
<CustomObject>
    <label>Opportunity Demo</label>
    <nameField>
        <displayFormat>OD-{0000}</displayFormat>
        <label>Opportunity Demo #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Demos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>