force-app/main/default/objects/Opportunity_Demo__c/fields/Demo__c.field-meta.xml
<CustomField>
    <fullName>Demo__c</fullName>
    <label>Demo</label>
    <referenceTo>Demo__c</referenceTo>
    <relationshipLabel>Opportunity Demos</relationshipLabel>
    <relationshipName>Opportunity_Demos</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>