force-app/main/default/objects/Opportunity_Demo__c/fields/Demo_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Demo_Scenario__c</fullName>
    <formula>TEXT(Demo__r.Audience__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Demo Scenario</label>
    <type>Text</type>
</CustomField>